Fix scrollbar fade

--- a/packages/weaviate-agent-chat-ui/src/components/Messages/messages.scss
+++ b/packages/weaviate-agent-chat-ui/src/components/Messages/messages.scss
@@ -13,15 +13,22 @@
   padding: 0 50px;
   padding-bottom: 10px;
   padding-top: 10px;
-  mask-image: linear-gradient(
-    to bottom,
-    rgba(0,0,0,0) 0%,
-    rgba(0,0,0,1) 10px,
-    rgba(0,0,0,1) calc(100% - 10px),
-    rgba(0,0,0,0) 100%
-  );
-  mask-size: calc(100% - 15px) 100%;
-  mask-position: 0 0;
+  mask-image:
+    linear-gradient(
+      to bottom,
+      transparent 0,
+      black 10px,
+      black calc(100% - 10px),
+      transparent 100%
+    ),
+    linear-gradient(
+      to right,
+      transparent calc(100% - 10px),
+      black calc(100% - 10px)
+    );
+  mask-size: 100% 100%, 100% 100%;
+  mask-repeat: no-repeat, no-repeat;
+  mask-composite: add;
 }
 
 
